force-app/main/default/objects/Donation__c/fields/Donation_Date__c.field-meta.xml
<CustomField>
    <fullName>Donation_Date__c</fullName>
    <label>Donation_Date</label>
    <type>Date</type>
</CustomField>