force-app/main/default/objects/Donation__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Donor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Donations (Donor)</relationshipLabel>
    <relationshipName>Donations1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>