force-app/main/default/objects/Donation__c/fields/Receipt_Sent__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt_Sent</label>
    <type>Checkbox</type>
</CustomField>