force-app/main/default/objects/Donation__c/fields/Total_Donated__c.field-meta.xml
<CustomField>
    <fullName>Total_Donated__c</fullName>
    <label>Total Donated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>