force-app/main/default/objects/Donation__c/validationRules/Block_Donations_After_Campaign_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Donations_After_Campaign_End</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Campaign__c)),
    Campaign__r.EndDate &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>This campaign has ended. No new donations are allowed</errorMessage>
</ValidationRule>