force-app/main/default/objects/Donation__c/listViews/Donations.listView-meta.xml
<ListView>
    <fullName>Donations</fullName>
    <columns>NAME</columns>
    <columns>Donor__c</columns>
    <columns>email__c</columns>
    <columns>Donation_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Donations</label>
</ListView>