force-app/main/default/objects/Donation__c/listViews/Donations_made_for_campaigns.listView-meta.xml
<ListView>
    <fullName>Donations_made_for_campaigns</fullName>
    <columns>NAME</columns>
    <columns>Donor__c</columns>
    <columns>email__c</columns>
    <columns>Donation_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Donations made for campaigns</label>
</ListView>